STRETCH - fixed menu and form at the bottom

--- a/css/index.css
+++ b/css/index.css
@@ -159,6 +159,9 @@ h2 {
 h3 {
   font-size: 2.8rem;
 }
+h4 {
+  font-size: 2.4rem;
+}
 p {
   font-size: 1.6rem;
   line-height: 1.4;
@@ -197,6 +200,15 @@ nav a {
 nav h1 {
   padding-bottom: 5px;
 }
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #c3c3c3;
+}
+.sticky + .container {
+  padding-top: 200px;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -204,8 +216,30 @@ footer {
   border: 1px double #e0e0e0;
   border-radius: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.form {
+  width: 100%
+  border: 1px solid lightgray;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+.form input [type=text] {
+  padding: 10px;
+  width: 50%;
+}
+.form input[type=submit] {
+  background-color: gray;
+  border-radius: 4px;
+  padding: 10px 10px;
+  margin: 4px 2px;
+  text-align: center;
+  font-size: 1.6rem;
+  cursor: pointer;
+  color: white;
 }
 @media (max-width: 500px) {
   .home .header-img {
