--- a/less/footer.less
+++ b/less/footer.less
@@ -6,6 +6,21 @@ footer {
   border: 1px double #e0e0e0;
   border-radius: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.form{
+  width: 100%
+  border: 1px solid lightgray;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  input [type=text]{
+    padding: 10px;
+    width: 50%;
+  }
+  input[type=submit]{
+    .sub-button(1.6rem, 4px);
+  }
 }
