--- a/less/global.less
+++ b/less/global.less
@@ -27,6 +27,9 @@ h2 {
 h3 {
   font-size: 2.8rem;
 }
+h4{
+  font-size: 2.4rem;
+}
 
 p {
   font-size: 1.6rem;
