--- a/less/mixins.less
+++ b/less/mixins.less
@@ -24,3 +24,14 @@
   color: @btn-bg-color;
   border: 0.5px solid @btn-bg-color;
 }
+.sub-button(@subfont-size, @subradius)
+{
+  background-color: gray;
+  border-radius: @subradius;
+  padding: 10px 10px;
+  margin: 4px 2px;
+  text-align: center;
+  font-size: @subfont-size;
+  cursor: pointer;
+  color: white;
+}
